WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
66609
[chromium] Regression: Fix clang errors from
r93424
https://bugs.webkit.org/show_bug.cgi?id=66609
Summary
[chromium] Regression: Fix clang errors from r93424
Adrienne Walker
Reported
2011-08-19 16:40:13 PDT
r93424
introduces a Clang error, where TiledLayerChromium::invalidateRect(const IntRect& contentRect) hides LayerChromium::invalidateRect(const FloatRect& dirtyRect). This should be fixed.
Attachments
Patch
(1.45 KB, patch)
2011-08-19 16:42 PDT
,
Adrienne Walker
jamesr
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adrienne Walker
Comment 1
2011-08-19 16:42:48 PDT
Created
attachment 104595
[details]
Patch
James Robinson
Comment 2
2011-08-19 16:47:43 PDT
Comment on
attachment 104595
[details]
Patch R=me
Adrienne Walker
Comment 3
2011-08-19 16:50:17 PDT
Committed
r93454
: <
http://trac.webkit.org/changeset/93454
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug