[chromium] Regression: Fix clang errors from r93424 https://bugs.webkit.org/show_bug.cgi?id=66609

Reviewed by James Robinson.

The invalidateRect function does not appear to be used anywhere
because the setNeedsDisplay function is used instead. Fix the Clang
error by just removing this unused vestigial base class function.

* platform/graphics/chromium/LayerChromium.h:

Canonical link: https://commits.webkit.org/82444@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93454 268f45cc-cd09-0410-ab3c-d52691b4dbfc